fix firefly spacing issue

--- a/events/blocks/firefly-generator/firefly-generator.css
+++ b/events/blocks/firefly-generator/firefly-generator.css
@@ -16,7 +16,6 @@
 
   font-family: var(--ff-font);
   padding: 24px 18px 24px 18px;
-  height: 236px;
   display: flex;
   align-items: center;
   justify-content: center;
